# rules_proto_grpc

./: repositories.bzl
github.com/grpc-ecosystem/grpc-gateway/: BUILD.bazel
