load("//:plugin.bzl", "proto_plugin")

proto_plugin(
    name = "grpc_gateway_plugin",
    output_directory = True,  # Plugin outputs cannot be predicted as they depend on service/package name
    # Show options:
    # $ bazel run @grpc_ecosystem_grpc_gateway//protoc-gen-grpc-gateway -- --help
    # options = [
    #     "logtostderr=true",
    # ],
    tool = "@grpc_ecosystem_grpc_gateway//protoc-gen-grpc-gateway",
    exclusions = [
        "google/api",
        "google/protobuf",
    ],
    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "swagger_plugin",
    output_directory = True,  # Plugin outputs cannot be predicted as they depend on service/package name
    # Show options:
    # $ bazel run @grpc_ecosystem_grpc_gateway//protoc-gen-grpc-swagger -- --help
    # options = [
    #     "json_names_for_fields",
    # ],
    tool = "@grpc_ecosystem_grpc_gateway//protoc-gen-swagger",
    exclusions = [
        "google/api",
        "google/protobuf",
    ],
    visibility = ["//visibility:public"],
)
